--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>ratingstars</artifactId>
+            <version>2.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
