--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <vaadin.version>7.3.7</vaadin.version>
+        <vaadin.version>7.4.0</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 	</properties>
 	<repositories>
@@ -185,6 +185,11 @@
             <groupId>org.vaadin.addons</groupId>
             <artifactId>ratingstars</artifactId>
             <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.lt</groupId>
+            <artifactId>rowlayout</artifactId>
+            <version>1.2</version>
         </dependency>
 	</dependencies>
 
