--- a/pom.xml
+++ b/pom.xml
@@ -201,8 +201,15 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+                    <encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
 			<!-- As we are doing "inplace" GWT compilation, ensure the widgetset -->
 			<!-- directory is cleaned properly -->
 			<plugin>
